<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CepView</string>
    <string name="action_settings">Settings</string>
    <string name="cep_view_cep">CEP</string>
    <string name="cep_view_endereco">Endereço</string>
    <string name="cep_view_numero">Número</string>
    <string name="cep_view_complemento">Complemento</string>
    <string name="cep_view_bairro">Bairro</string>
    <string name="cep_view_cidade">Cidade</string>
    <string name="cep_view_estado">Estado</string>
</resources>
